use pre-wrap fixes #23, #24

--- a/mockup/css/style.css
+++ b/mockup/css/style.css
@@ -3,7 +3,6 @@
 
 body {
   font-family: "Source Han Sans TC", "Noto Sans", Helvetica, Arial, sans-serif;
-  background: rgb;
   margin: 0px;
   padding: 0px;
   text-rendering: optimizeLegibility;
@@ -991,6 +990,11 @@ a.nav_item_sidebar--sub {
 
 .post_item_text pre {
   overflow-x: auto;
+   white-space: pre-wrap;       /* css-3 */
+   white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+   white-space: -pre-wrap;      /* Opera 4-6 */
+   white-space: -o-pre-wrap;    /* Opera 7 */
+   word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
 
 blockquote {
